--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     compile 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.4'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.ss.bottomnavigation:bottomnavigation:1.5.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
