--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,13 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'android.arch.persistence.room:runtime:1.1.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.0'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha1'
+
+    compile 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:common-java8:1.1.1'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
 }
